Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-19390

Output view buttons and menu are not consistent with each other

XMLWordPrintable

    • 75705e3eab3167e43717529a9f1000b7f9f2bcba

      1. Start Creator without previous settings, e.g. by passing the parameter -settingspath <empty directory>.
      2. Show the menu for selecting output views.
        "General Messages" is not checked although a button for this view is visible:

      The menu and the line of buttons should be consistent. When a button is being displayed, the respective menu item should be checked and vice-versa.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            drewpts Andrey Poltavets
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes