OutputPane: Fix inconsistency between output view buttons and popup menu

Since definition of function OutputPaneToggleButton::flash() sets the
button visibility to true this leads to inconsistency which had been
described in ticket.

Task-number: QTCREATORBUG-19390
Change-Id: I5e88d2b42808cdec24d25e126b1c8de011a1db84
Reviewed-by: Eike Ziller <eike.ziller@qt.io>